@@ -2539,10 +2539,6 @@ use the OCaml run-time system, typically a blocking input/output operation.
 This section contains some general guidelines for writing C stubs that use
 Windows Unicode APIs.
 
-{\bf Note:} This is an experimental feature of OCaml: the set of APIs below, as
-well as their exact semantics are not final and subject to change in future
-releases.
-
 The OCaml system under Windows can be configured at build time in one of two
 modes:
 
@@ -2645,9 +2641,7 @@ of the function to bind:
 The rest of the binding is the same for both platforms:
 
 \begin{verbatim}
-/* The following define is necessary because the API is experimental */
 #define CAML_NAME_SPACE
-#define CAML_INTERNALS
 
 #include <caml/mlvalues.h>
 #include <caml/misc.h>
