@@ -81,6 +81,10 @@ Working version
   (Xavier Leroy, reports by Tomasz Kłoczko and R.W.M. Jones, review by Anil
    Madhavapeddy, Stephen Dolan, and Florian Angeletti)
 
+- #10318: Windows Unicode runtime functions are no longer marked as
+  experimental.
+  (Nicolás Ojeda Bär, review by David Allsopp)
+
 ### Code generation and optimizations:
 
 - #9876: do not cache the young_limit GC variable in a processor register.
